# meta-builder

./: .gitignore  README.md  fly.toml  pyproject.toml
.agent/: intent-spec.json  task-graph.json
.github/workflows/: agent-build.yml  agent-fix.yml
agent/: orchestrator.py
agent/intent/: ambiguity_scorer.py  defaults_agent.py  feasibility_critic.py  prompt_parser.py  requirement_closure.py
agent/mesh/: architect.py  coder.py  critic.py  deployer.py  monitor_setup.py  plan_validator.py  planner.py  researcher.py  tester.py
agent/monitor/: anomaly_classifier.py  context_builder.py  fix_agent.py  log_watcher.py  skills_updater.py  validator.py
agent/router/: router.py  scorer.py  signal_collector.py
agent/shared/: capabilities.py  decision_log.py  intent_spec.py  knowledge.py  run_context.py  sandbox.py  search.py  skills_store.py  state.py  telemetry.py
docker/: Dockerfile.agent
docs/: system-flowchart.html
mcp/: filesystem_server.py  github_server.py  web_search_server.py
memory/: agent-contracts.md  constraints.md  progress.md
scripts/: smoke.py
skills/: anthropic-sdk.md  build-progress.md  deep-agents.md  fly-workers.md  github-actions.md  mcp-protocol.md  meta-builder-project.md  perplexity-api.md  redis-state.md
tests/: conftest.py
tests/functional/: conftest.py  test_architect_output.py  test_intent_output.py  test_research_output.py
tests/integration/: test_full_pipeline.py  test_intent_block.py  test_mesh_block.py  test_monitor_block.py  test_router_block.py
tests/mcp/: test_filesystem_server.py  test_github_server.py  (+1 more)
(+36 files in other folders)
